--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Botanical park</title>
-<link rel="stylesheet" href="../../../../../Applications/MAMP/htdocs/botanicalpark/style.css" />
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <div id="container">
