--- a/Trials/index.html
+++ b/Trials/index.html
@@ -65,7 +65,7 @@
       Might be 21<br />
       HERE 8260</p>
     <!--Adress defines the contact information for the autor, people...-->
-    <adresss> Have a question about our website? <a href="../../../../../Applications/MAMP/htdocs/botanicalpark/side-feedback.html">Contact our WEB support</a> </adresss>
+    <adresss> Have a question abffffout our website? <a href="../../../../../Applications/MAMP/htdocs/botanicalpark/side-feedback.html">Contact our WEB support</a> </adresss>
     <p id="last"><small>&copy; Copyright Aarhus Kommune 2017</small> </p>
   </footer>
 </div>
